arreglando numero de usuarios para Qr

--- a/static/admin_pages/accounts.html
+++ b/static/admin_pages/accounts.html
@@ -69,6 +69,15 @@
         </div>
 
         <div class="form-group qr-modal-form-group">
+            <label for="qr-modal-max-users" class="qr-modal-label">Número de Usuarios para esta Mesa:</label>
+            <input type="number" id="qr-modal-max-users" class="form-control qr-modal-select" min="1" value="10"
+                placeholder="Ej: 10, 20, 50...">
+            <button type="button" id="qr-modal-generate-users" class="form-btn">
+                🔄 Generar Usuarios
+            </button>
+        </div>
+
+        <div class="form-group qr-modal-form-group">
             <label for="qr-modal-user-select" class="qr-modal-label">Seleccionar
                 Usuario:</label>
             <select id="qr-modal-user-select" class="form-control qr-modal-select">
