--- a/static/admin_dashboard.html
+++ b/static/admin_dashboard.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="/static/admin_pages/queue.css">
     <link rel="stylesheet" href="/static/admin_pages/reports.css">
     <link rel="stylesheet" href="/static/admin_pages/accounts.css">
+    <link rel="stylesheet" href="/static/admin_pages/tables.css">
     <link rel="stylesheet" href="/static/admin_pages/settings.css">
     <link rel="stylesheet" href="/static/admin_pages/admin_modals.css">
 </head>
