--- a/static/admin_dashboard_bees.html
+++ b/static/admin_dashboard_bees.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="/static/admin_pages/reports.css">
     <link rel="stylesheet" href="/static/admin_pages/settings.css">
     <link rel="stylesheet" href="/static/admin_pages/accounts.css">
+    <link rel="stylesheet" href="/static/admin_pages/tables.css">
 </head>
 
 <body>
