emoticones para usuarios

--- a/static/index.html
+++ b/static/index.html
@@ -128,12 +128,18 @@
                     <h3>😊 Enviar Reacción</h3>
                 </div>
                 <div id="reaction-buttons" class="reaction-grid">
-                    <button class="reaction-btn" data-emoji="😊" title="¡Genial!">😊</button>
-                    <button class="reaction-btn" data-emoji="👍" title="¡Me gusta!">👍</button>
-                    <button class="reaction-btn" data-emoji="🔥" title="¡Fuego!">🔥</button>
-                    <button class="reaction-btn" data-emoji="🤩" title="¡Increíble!">🤩</button>
-                    <button class="reaction-btn" data-emoji="🎤" title="¡Buena voz!">🎤</button>
+                    <button class="reaction-btn" data-emoji="👏" title="¡Aplausos!">👏</button>
                     <button class="reaction-btn" data-emoji="❤️" title="¡Me encanta!">❤️</button>
+                    <button class="reaction-btn" data-emoji="💔" title="¡Corazón roto!">💔</button>
+                    <button class="reaction-btn" data-emoji="😈" title="¡Diablillo!">😈</button>
+                    <button class="reaction-btn" data-emoji="😳" title="¡Sonrojado!">😳</button>
+                    <button class="reaction-btn" data-emoji="😢" title="¡Triste!">😢</button>
+                    <button class="reaction-btn" data-emoji="🙈" title="¡No miro!">🙈</button>
+                    <button class="reaction-btn" data-emoji="🍻" title="¡Salud!">🍻</button>
+                    <button class="reaction-btn" data-emoji="🤩" title="¡Increíble!">🤩</button>
+                    <button class="reaction-btn" data-emoji="🔥" title="¡Fuego!">🔥</button>
+                    <button class="reaction-btn" data-emoji="👍" title="¡Me gusta!">👍</button>
+                    <button class="reaction-btn" data-emoji="😀" title="¡Feliz!">😀</button>
                 </div>
             </div>
         </main>
