--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LA CANTA QUE RANA</title>
-    <link rel="stylesheet" href="/static/styles_bees.css">
+    <link rel="stylesheet" href="/static/css/styles_bees.css">
 </head>
 
 <body>
@@ -194,7 +194,7 @@
     <div id="reaction-container" class="reaction-container"></div>
 
     <!-- SCRIPT PRINCIPAL -->
-    <script src="/static/app_bees.js"></script>
+    <script src="/static/js/app_bees.js"></script>
 </body>
 
 </html>
